<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AjoutDepartement">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="?attr/colorSecondary"
        android:gravity="center"
        android:padding="10dp"
        android:text="Inscription Apprenant"
        android:textColor="@color/black"
        android:textSize="@dimen/taille_titre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:inputType="textPersonName"
        android:text="@string/input1"
        android:textColor="#7C7C7C"
        android:textSize="@dimen/taille_txt"
        app:layout_constraintBaseline_toBaselineOf="@id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/date"
        android:textSize="@dimen/taille_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView5" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="54dp"
        android:text="@string/prenom"
        android:textSize="@dimen/taille_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:inputType="textPersonName"
        android:text="@string/date_in"
        android:textColor="#7C7C7C"
        android:textSize="@dimen/taille_txt"
        app:layout_constraintBaseline_toBaselineOf="@id/textView6"
        app:layout_constraintStart_toEndOf="@+id/textView6" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:inputType="textPersonName"
        android:text="@string/nom_in"
        android:textColor="#7C7C7C"
        android:textSize="@dimen/taille_txt"
        app:layout_constraintBaseline_toBaselineOf="@id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/nom"
        android:textSize="@dimen/taille_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="?attr/colorSecondary"
        android:gravity="center"
        android:padding="6dp"
        android:text="@string/formation"
        android:textColor="?attr/colorPrimary"
        android:textSize="@dimen/taille_titre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/filiere"
        android:textSize="@dimen/taille_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/editTextTextPersonName8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/filiere_in"
        android:textSize="@dimen/taille_txt"
        android:textColor="#7C7C7C"
        app:layout_constraintBaseline_toBaselineOf="@id/textView8"
        app:layout_constraintStart_toEndOf="@+id/textView8" />


    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/promotion"
        android:textSize="@dimen/taille_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView8" />

    <EditText
        android:id="@+id/editTextTextPersonName9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/promotion_in"
        android:textColor="#7C7C7C"
        android:textSize="@dimen/taille_txt"
        app:layout_constraintBaseline_toBaselineOf="@id/textView9"
        app:layout_constraintStart_toEndOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/annee"
        android:textSize="@dimen/taille_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView9" />

    <EditText
        android:id="@+id/editTextTextPersonName10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/annee_in"
        android:textSize="@dimen/taille_txt"
        android:textColor="#7C7C7C"
        app:layout_constraintBaseline_toBaselineOf="@id/textView10"
        app:layout_constraintStart_toEndOf="@+id/textView10"/>


    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="?attr/colorSecondary"
        android:gravity="center"
        android:padding="6dp"
        android:text="@string/encadrement"
        android:textColor="?attr/colorPrimary"
        android:textSize="@dimen/taille_titre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/editTextTextPersonName12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/sujet_in"
        android:textColor="#7C7C7C"
        android:textSize="@dimen/taille_txt"
        app:layout_constraintBaseline_toBaselineOf="@id/textView12"
        app:layout_constraintStart_toEndOf="@+id/textView12" />

    <EditText
        android:id="@+id/editTextTextPersonName14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/nomen_in"
        android:textColor="#7C7C7C"
        android:textSize="@dimen/taille_txt"
        app:layout_constraintBaseline_toBaselineOf="@id/textView14"
        app:layout_constraintStart_toEndOf="@+id/textView14" />

    <EditText
        android:id="@+id/editTextTextPersonName13"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/prenomen_in"
        android:textColor="#7C7C7C"
        android:textSize="@dimen/taille_txt"
        app:layout_constraintBaseline_toBaselineOf="@id/textView13"
        app:layout_constraintStart_toEndOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/nomen"
        android:textSize="@dimen/taille_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView13" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/sujet"
        android:textSize="@dimen/taille_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/prenomen"
        android:textSize="@dimen/taille_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView12" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:textColor="@color/secondary_ept"
        android:text="@string/enregistrement"
        app:layout_constraintTop_toBottomOf="@id/textView14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="35dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>